5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1764_1189.log
== TEST (2019-05-29 22:20:33) 
-- CODE:
from numpy import *
n = (str(input("digite: ")).replace()).power
a = 0
b = -1
while(a < len(n)):
	if (n[a]==n[b]):
		c=1
	if (n[a]!=n[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:21:26) 
-- CODE:
from numpy import *
n = (str(input("digite: ")).replace()).power()
a = 0
b = -1
while(a < len(n)):
	if (n[a]==n[b]):
		c=1
	if (n[a]!=n[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:22:25) 
-- CODE:
from numpy import *
n = str(input("digite: ").power()).replace()
a = 0
b = -1
while(a < len(n)):
	if (n[a]==n[b]):
		c=1
	if (n[a]!=n[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:24:15) 
-- CODE:
from numpy import *
n = str(input("digite: ")).replace()
i=n.power()
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:27:07) 
-- CODE:
from numpy import *
n = str(input("digite: ")).power
i=replace(n)
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:27:25) 
-- CODE:
from numpy import *
n = str(input("digite: ")).power()
i=replace(n)
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:28:46) 
-- CODE:
from numpy import *
n = input("digite: ").power()
i=n.replace()
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:29:27) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace()
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:30:18) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace("","")
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:30:43) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace("""")
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
File "XXXX", line 17
    
    ^
SyntaxError: EOF while scanning triple-quoted string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:30:57) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace("")
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(n)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:31:29) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace("","")
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(i)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:31:57) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace(" ","")
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(i)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:34:29) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace("","")
a = 0
b = -1
while(a < len(n)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(i)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:37:31) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace(" ","")
a = 0
b = -1
while(a < len(i)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(i)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:37:42) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace(" ","")
a = 0
b = -1
while(a < len(i)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(i)
print(c)
		
	
-- EXECUTION TIME:
0.552987
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:11:31) 
-- CODE:
from numpy import *
n = input("digite: ").upper()
i=n.replace(" ","")
a = 0
b = -1
while(a < len(i)):
	if (i[a]==i[b]):
		c=1
	if (i[a]!=i[b]):
		c=0
	a = a + 1
	b = b - 1
print(i)
print(c)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
